# memobot-mcp

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: preflight.sh
src/memobot_mcp/: auth.py  client.py  server.py  updates.py
tests/: test_auth.py  test_client.py  test_updates.py
